--- a/app/src/main/res/layout/activity_product_details_buyer.xml
+++ b/app/src/main/res/layout/activity_product_details_buyer.xml
@@ -27,6 +27,33 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
+
+            <!-- Previous Button -->
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/btn_previous"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:textSize="24sp"
+                android:textColor="@android:color/white"
+                android:background="@drawable/left"
+                app:layout_constraintTop_toTopOf="@id/viewPager"
+                app:layout_constraintStart_toStartOf="@id/viewPager"
+                android:layout_margin="10dp"
+                app:layout_constraintBottom_toBottomOf="@id/viewPager"/>
+
+            <!-- Next Button -->
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/btn_next"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:textSize="24sp"
+                android:textColor="@android:color/white"
+                android:background="@drawable/right"
+                app:layout_constraintTop_toTopOf="@id/viewPager"
+                app:layout_constraintEnd_toEndOf="@id/viewPager"
+                android:layout_margin="10dp"
+                app:layout_constraintBottom_toBottomOf="@id/viewPager"/>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv"
                 android:layout_width="50dp"
@@ -63,6 +90,8 @@
                 android:id="@+id/tv_label_product_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
+                android:layout_marginTop="10dp"
                 android:text="Product name:"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -74,6 +103,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="8dp"
                 app:layout_constraintTop_toBottomOf="@id/cv"
                 app:layout_constraintStart_toEndOf="@id/tv_label_product_name"
@@ -185,7 +215,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_add_review"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="Add Review"
                 android:layout_marginTop="16dp"
